// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`u-sidebar.vue Demo-分组 1`] = `
<div>
  <nav
    class="root"
  >
    <div
      class="root"
    >
      <div
        class="head"
      >
        <div
          class="title"
          vusion-slot-name="title"
          vusion-slot-name-edit="title"
        >
          <span
            class="root"
            vusion-slot-name-edit="text"
          >
            导航一
          </span>
        </div>
         
        <!---->
         
        <span
          class="extra"
          vusion-slot-name="extra"
        />
      </div>
       
      <transition-stub>
        <div
          class="body"
          vusion-slot-name="default"
        >
           
          <a
            class="root"
            target="_self"
            vusion-slot-name="default"
            vusion-slot-name-edit="text"
          >
            <!---->
             
            <span
              class="root"
              vusion-slot-name-edit="text"
            >
              选项一
            </span>
             
            <!---->
          </a>
           
          <!---->
        </div>
      </transition-stub>
    </div>
     
    <div
      class="root"
    >
      <div
        class="head"
      >
        <div
          class="title"
          vusion-slot-name="title"
          vusion-slot-name-edit="title"
        >
          <span
            class="root"
            vusion-slot-name-edit="text"
          >
            导航二
          </span>
        </div>
         
        <!---->
         
        <span
          class="extra"
          vusion-slot-name="extra"
        />
      </div>
       
      <transition-stub>
        <div
          class="body"
          vusion-slot-name="default"
        >
           
          <a
            class="root"
            target="_self"
            vusion-slot-name="default"
            vusion-slot-name-edit="text"
          >
            <!---->
             
            <span
              class="root"
              vusion-slot-name-edit="text"
            >
              选项一
            </span>
             
            <!---->
          </a>
           
          <!---->
        </div>
      </transition-stub>
    </div>
  </nav>
</div>
`;

exports[`u-sidebar.vue Demo-分组 2`] = `
<div>
  <nav
    class="root"
  >
    <div
      class="root"
    >
      <div
        class="head"
        title="导航一"
      >
        <div
          class="title"
          vusion-slot-name="title"
          vusion-slot-name-edit="title"
        >
          
                导航一
                
          <!---->
        </div>
         
        <!---->
         
        <span
          class="extra"
          vusion-slot-name="extra"
        />
      </div>
       
      <transition-stub>
        <div
          class="body"
          vusion-slot-name="default"
        >
          <a
            class="root"
            target="_self"
            vusion-slot-name="default"
            vusion-slot-name-edit="text"
          >
            <!---->
             选项一 
            <!---->
          </a>
           
          <!---->
        </div>
      </transition-stub>
    </div>
     
    <div
      class="root"
    >
      <div
        class="head"
        title="导航二"
      >
        <div
          class="title"
          vusion-slot-name="title"
          vusion-slot-name-edit="title"
        >
          
                导航二
                
          <!---->
        </div>
         
        <!---->
         
        <span
          class="extra"
          vusion-slot-name="extra"
        />
      </div>
       
      <transition-stub>
        <div
          class="body"
          vusion-slot-name="default"
        >
          <a
            class="root"
            target="_self"
            vusion-slot-name="default"
            vusion-slot-name-edit="text"
          >
            <!---->
             选项一 
            <!---->
          </a>
           
          <!---->
        </div>
      </transition-stub>
    </div>
  </nav>
</div>
`;

exports[`u-sidebar.vue Demo-基本用法 1`] = `
<div>
  <nav
    class="root"
  >
    <a
      class="root"
      target="_self"
      vusion-slot-name="default"
      vusion-slot-name-edit="text"
    >
      <!---->
       
      <span
        class="root"
        vusion-slot-name-edit="text"
      >
        导航一
      </span>
       
      <!---->
    </a>
     
    <a
      class="root"
      target="_self"
      vusion-slot-name="default"
      vusion-slot-name-edit="text"
    >
      <!---->
       
      <span
        class="root"
        vusion-slot-name-edit="text"
      >
        导航二
      </span>
       
      <!---->
    </a>
     
    <a
      class="root"
      target="_self"
      vusion-slot-name="default"
      vusion-slot-name-edit="text"
    >
      <!---->
       
      <span
        class="root"
        vusion-slot-name-edit="text"
      >
        导航三
      </span>
       
      <!---->
    </a>
  </nav>
</div>
`;

exports[`u-sidebar.vue Demo-基本用法 2`] = `
<div>
  <nav
    class="root"
  >
    <a
      class="root"
      target="_self"
      vusion-slot-name="default"
      vusion-slot-name-edit="text"
    >
      <span
        class="lcp-iconv singleicon"
      >
        <span
          class="iconwrap"
        >
          <svg
            aria-hidden="true"
            class="iconsvg"
          >
            <use
              xlink:href="#pc-calendar"
            />
          </svg>
        </span>
         
        <div
          class="icontext"
          vusion-slot-name="default"
        >
           
          <!---->
        </div>
      </span>
       导航一 
      <!---->
    </a>
     
    <a
      class="root"
      target="_self"
      vusion-slot-name="default"
      vusion-slot-name-edit="text"
    >
      <!---->
       导航二 
      <!---->
    </a>
     
    <a
      class="root"
      selected="selected"
      target="_self"
      vusion-slot-name="default"
      vusion-slot-name-edit="text"
    >
      <!---->
       导航三 
      <!---->
    </a>
  </nav>
</div>
`;

exports[`u-sidebar.vue Demo-手风琴模式 1`] = `
<div>
  <nav
    class="root"
  >
    <div
      class="root"
    >
      <div
        class="head"
      >
        <div
          class="title"
          vusion-slot-name="title"
          vusion-slot-name-edit="title"
        >
          <span
            class="root"
            vusion-slot-name-edit="text"
          >
            导航一
          </span>
        </div>
         
        <span
          class="expander"
        />
         
        <span
          class="extra"
          vusion-slot-name="extra"
        />
      </div>
       
      <transition-stub>
        <div
          class="body"
          style="display: none;"
          vusion-slot-name="default"
        >
           
          <a
            class="root"
            target="_self"
            vusion-slot-name="default"
            vusion-slot-name-edit="text"
          >
            <!---->
             
            <span
              class="root"
              vusion-slot-name-edit="text"
            >
              选项一
            </span>
             
            <!---->
          </a>
           
          <!---->
        </div>
      </transition-stub>
    </div>
     
    <div
      class="root"
    >
      <div
        class="head"
      >
        <div
          class="title"
          vusion-slot-name="title"
          vusion-slot-name-edit="title"
        >
          <span
            class="root"
            vusion-slot-name-edit="text"
          >
            导航二
          </span>
        </div>
         
        <span
          class="expander"
        />
         
        <span
          class="extra"
          vusion-slot-name="extra"
        />
      </div>
       
      <transition-stub>
        <div
          class="body"
          style="display: none;"
          vusion-slot-name="default"
        >
           
          <a
            class="root"
            target="_self"
            vusion-slot-name="default"
            vusion-slot-name-edit="text"
          >
            <!---->
             
            <span
              class="root"
              vusion-slot-name-edit="text"
            >
              选项一
            </span>
             
            <!---->
          </a>
           
          <!---->
        </div>
      </transition-stub>
    </div>
     
    <div
      class="root"
    >
      <div
        class="head"
      >
        <div
          class="title"
          vusion-slot-name="title"
          vusion-slot-name-edit="title"
        >
          <span
            class="root"
            vusion-slot-name-edit="text"
          >
            导航三
          </span>
        </div>
         
        <span
          class="expander"
        />
         
        <span
          class="extra"
          vusion-slot-name="extra"
        />
      </div>
       
      <transition-stub>
        <div
          class="body"
          style="display: none;"
          vusion-slot-name="default"
        >
           
          <a
            class="root"
            target="_self"
            vusion-slot-name="default"
            vusion-slot-name-edit="text"
          >
            <!---->
             
            <span
              class="root"
              vusion-slot-name-edit="text"
            >
              选项一
            </span>
             
            <!---->
          </a>
           
          <!---->
        </div>
      </transition-stub>
    </div>
  </nav>
</div>
`;

exports[`u-sidebar.vue Demo-手风琴模式 2`] = `
<div>
  <nav
    class="root"
  >
    <div
      class="root"
    >
      <div
        class="head"
        title="导航一"
      >
        <div
          class="title"
          vusion-slot-name="title"
          vusion-slot-name-edit="title"
        >
          
                导航一
                
          <!---->
        </div>
         
        <span
          class="expander"
        />
         
        <span
          class="extra"
          vusion-slot-name="extra"
        />
      </div>
       
      <transition-stub>
        <div
          class="body"
          style="display: none;"
          vusion-slot-name="default"
        >
          <a
            class="root"
            target="_self"
            vusion-slot-name="default"
            vusion-slot-name-edit="text"
          >
            <!---->
             选项一 
            <!---->
          </a>
           
          <!---->
        </div>
      </transition-stub>
    </div>
     
    <div
      class="root"
    >
      <div
        class="head"
        title="导航二"
      >
        <div
          class="title"
          vusion-slot-name="title"
          vusion-slot-name-edit="title"
        >
          
                导航二
                
          <!---->
        </div>
         
        <span
          class="expander"
        />
         
        <span
          class="extra"
          vusion-slot-name="extra"
        />
      </div>
       
      <transition-stub>
        <div
          class="body"
          style="display: none;"
          vusion-slot-name="default"
        >
          <a
            class="root"
            target="_self"
            vusion-slot-name="default"
            vusion-slot-name-edit="text"
          >
            <!---->
             选项一 
            <!---->
          </a>
           
          <!---->
        </div>
      </transition-stub>
    </div>
     
    <div
      class="root"
    >
      <div
        class="head"
        title="导航三"
      >
        <div
          class="title"
          vusion-slot-name="title"
          vusion-slot-name-edit="title"
        >
          
                导航三
                
          <!---->
        </div>
         
        <span
          class="expander"
        />
         
        <span
          class="extra"
          vusion-slot-name="extra"
        />
      </div>
       
      <transition-stub>
        <div
          class="body"
          style="display: none;"
          vusion-slot-name="default"
        >
          <a
            class="root"
            target="_self"
            vusion-slot-name="default"
            vusion-slot-name-edit="text"
          >
            <!---->
             选项一 
            <!---->
          </a>
           
          <!---->
        </div>
      </transition-stub>
    </div>
  </nav>
</div>
`;

exports[`u-sidebar.vue Demo-折叠功能 1`] = `
<div>
  <nav
    class="root"
  >
    <div
      class="root"
    >
      <div
        class="head"
      >
        <div
          class="title"
          vusion-slot-name="title"
          vusion-slot-name-edit="title"
        >
          <span
            class="root"
            vusion-slot-name-edit="text"
          >
            导航一
          </span>
        </div>
         
        <span
          class="expander"
          expanded="true"
        />
         
        <span
          class="extra"
          vusion-slot-name="extra"
        />
      </div>
       
      <transition-stub>
        <div
          class="body"
          vusion-slot-name="default"
        >
           
          <a
            class="root"
            target="_self"
            vusion-slot-name="default"
            vusion-slot-name-edit="text"
          >
            <!---->
             
            <span
              class="root"
              vusion-slot-name-edit="text"
            >
              选项一
            </span>
             
            <!---->
          </a>
           
          <!---->
        </div>
      </transition-stub>
    </div>
     
    <div
      class="root"
      disabled="disabled"
    >
      <div
        class="head"
      >
        <div
          class="title"
          vusion-slot-name="title"
          vusion-slot-name-edit="title"
        >
          <span
            class="root"
            vusion-slot-name-edit="text"
          >
            导航二
          </span>
        </div>
         
        <span
          class="expander"
          expanded="true"
        />
         
        <span
          class="extra"
          vusion-slot-name="extra"
        />
      </div>
       
      <transition-stub>
        <div
          class="body"
          vusion-slot-name="default"
        >
           
          <a
            class="root"
            target="_self"
            vusion-slot-name="default"
            vusion-slot-name-edit="text"
          >
            <!---->
             
            <span
              class="root"
              vusion-slot-name-edit="text"
            >
              选项一
            </span>
             
            <!---->
          </a>
           
          <!---->
        </div>
      </transition-stub>
    </div>
  </nav>
</div>
`;

exports[`u-sidebar.vue Demo-折叠功能 2`] = `
<div>
  <nav
    class="root"
  >
    <div
      class="root"
    >
      <div
        class="head"
        title="导航一"
      >
        <div
          class="title"
          vusion-slot-name="title"
          vusion-slot-name-edit="title"
        >
          
                导航一
                
          <!---->
        </div>
         
        <span
          class="expander"
          expanded="true"
        />
         
        <span
          class="extra"
          vusion-slot-name="extra"
        />
      </div>
       
      <transition-stub>
        <div
          class="body"
          vusion-slot-name="default"
        >
          <a
            class="root"
            target="_self"
            vusion-slot-name="default"
            vusion-slot-name-edit="text"
          >
            <!---->
             选项一 
            <!---->
          </a>
           
          <!---->
        </div>
      </transition-stub>
    </div>
     
    <div
      class="root"
      disabled="disabled"
    >
      <div
        class="head"
        title="导航二"
      >
        <div
          class="title"
          vusion-slot-name="title"
          vusion-slot-name-edit="title"
        >
          
                导航二
                
          <!---->
        </div>
         
        <span
          class="expander"
          expanded="true"
        />
         
        <span
          class="extra"
          vusion-slot-name="extra"
        />
      </div>
       
      <transition-stub>
        <div
          class="body"
          vusion-slot-name="default"
        >
          <a
            class="root"
            target="_self"
            vusion-slot-name="default"
            vusion-slot-name-edit="text"
          >
            <!---->
             选项一 
            <!---->
          </a>
           
          <!---->
        </div>
      </transition-stub>
    </div>
  </nav>
</div>
`;
